fix / config phpstan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,5 +3,5 @@ parameters:
   paths:
     - src
     - test
-  ignoreErrors:
-    - '#Call to protected static method [a-zA-Z]+\(\) of class Respect\\Validaton\\Wrapper\\RespectValidationWrapperTrait\.#'
+  # ignoreErrors:
+  #   - '#Call to protected static method [a-zA-Z]+\(\) of class Respect\\Validaton\\Wrapper\\RespectValidationWrapperTrait\.#'
