--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,80 @@
-/vendor/
+# created at : 2021-12-09
+# title font : ANSII Regular
+# subtitle font : Small
+
+#   ██████  ███████
+#  ██    ██ ██
+#  ██    ██ ███████
+#  ██    ██      ██
+#   ██████  ███████
+#  __      ___         _               
+#  \ \    / (_)_ _  __| |_____ __ _____
+#   \ \/\/ /| | ' \/ _` / _ \ V  V (_-<
+#    \_/\_/ |_|_||_\__,_\___/\_/\_//__/
+#
+$RECYCLE.BIN/
+Thumbs.db
+Desktop.ini
+*.lnk
+
+#  ██ ██████  ███████
+#  ██ ██   ██ ██
+#  ██ ██   ██ █████
+#  ██ ██   ██ ██
+#  ██ ██████  ███████
+#   ___ _         ___ _                 
+#  | _ \ |_  _ __/ __| |_ ___ _ _ _ __  
+#  |  _/ ' \| '_ \__ \  _/ _ \ '_| '  \ 
+#  |_| |_||_| .__/___/\__\___/_| |_|_|_|
+#           |_|                         
 /.idea/
+#  __   _____  ___         _     
+#  \ \ / / __|/ __|___  __| |___ 
+#   \ V /\__ \ (__/ _ \/ _` / -_)
+#    \_/ |___/\___\___/\__,_\___|
+#
+/.vscode/
+#  _  _     _   ___                   
+# | \| |___| |_| _ ) ___ __ _ _ _  ___
+# | .` / -_)  _| _ \/ -_) _` | ' \(_-<
+# |_|\_\___|\__|___/\___\__,_|_||_/__/
+#
+/nbproject/
+
+#  ██████   █████   ██████ ██   ██  █████   ██████  ███████     ███    ███  █████  ███    ██  █████   ██████  ███████ ██████
+#  ██   ██ ██   ██ ██      ██  ██  ██   ██ ██       ██          ████  ████ ██   ██ ████   ██ ██   ██ ██       ██      ██   ██
+#  ██████  ███████ ██      █████   ███████ ██   ███ █████       ██ ████ ██ ███████ ██ ██  ██ ███████ ██   ███ █████   ██████
+#  ██      ██   ██ ██      ██  ██  ██   ██ ██    ██ ██          ██  ██  ██ ██   ██ ██  ██ ██ ██   ██ ██    ██ ██      ██   ██
+#  ██      ██   ██  ██████ ██   ██ ██   ██  ██████  ███████     ██      ██ ██   ██ ██   ████ ██   ██  ██████  ███████ ██   ██
+#                      __
+#  _ _  _ __ _ __     / /  _  _ __ _ _ _ _ _
+# | ' \| '_ \ '  \   / /  | || / _` | '_| ' \
+# |_||_| .__/_|_|_| /_/    \_, \__,_|_| |_||_|
+#      |_|                 |__/
+/node_modules/
+#                                      
+#   __ ___ _ __  _ __  ___ ___ ___ _ _ 
+#  / _/ _ \ '  \| '_ \/ _ (_-</ -_) '_|
+#  \__\___/_|_|_| .__/\___/__/\___|_|  
+#               |_|                    
+/vendor/
+
+#  ██████  ██████   ██████       ██ ███████  ██████ ████████
+#  ██   ██ ██   ██ ██    ██      ██ ██      ██         ██
+#  ██████  ██████  ██    ██      ██ █████   ██         ██
+#  ██      ██   ██ ██    ██ ██   ██ ██      ██         ██
+#  ██      ██   ██  ██████   █████  ███████  ██████    ██
+#   _          _   
+#  | |_ ___ __| |_ 
+#  |  _/ -_|_-<  _|
+#   \__\___/__/\__|
+#                  
 /.phpunit.result.cache
+/.phpunit.cache/
+#                              _ 
+#   __ _ ___ _ _  ___ _ _ __ _| |
+#  / _` / -_) ' \/ -_) '_/ _` | |
+#  \__, \___|_||_\___|_| \__,_|_|
+#  |___/                         
+*~
+*.log
