--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": "^8.1",
     "respect/validation": "^2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.5",
-    "phpstan/phpstan": "^0.12.64",
-    "ocramius/package-versions": "^2.1"
+    "squizlabs/php_codesniffer": "^3.7",
+    "phpstan/phpstan": "^1.8",
+    "ocramius/package-versions": ">2"
   },
   "type": "library",
   "autoload": {
